IMPALA-689 Fix buffer full conditions in rle and dict encoder.

Change-Id: I7c724eb8ec2a1e805b33c4d3307e5f4dcf2a12db
Reviewed-on: http://gerrit.ent.cloudera.com:8080/1065
Reviewed-by: Nong Li <nong@cloudera.com>
Tested-by: jenkins