be/src/runtime/data-stream-mgr.cc
@@ -58,6 +58,7 @@ DataStreamMgr::StreamControlBlock::StreamControlBlock(RuntimeState* state,
   buffer_full_total_timer_ = ADD_TIMER(profile, "SendersBlockedTotalTimer(*)");
   data_arrival_timer_ = ADD_TIMER(profile, "DataArrivalWaitTime");
   first_batch_wait_timer_ = ADD_TIMER(profile, "FirstBatchArrivalWaitTime");
+  add_batch_pending_.Set(true);
 }
 
 RowBatch* DataStreamMgr::StreamControlBlock::GetBatch(bool* is_cancelled) {
